# robotics-for-ai

./: .gitignore  .project  Command lines  README.md  frames.gv
brain/src/: README  bashrc  brain.py  braintest.py  configparse.py  memory.py  memorytest.py  req  sensorintegrator.py  sensorintegratortest.py  start.sh  testrunner.py
brain/src/arduino/src/: sketch.ino
brain/src/basebehavior/: abstractbehavior.py  allbehaviors.py  behaviorcontroller.py  behaviorimplementation.py  behaviortest.py  dotestall.py  generate_behaviors.py
brain/src/bbie/: bbie.py  bbietest.py  intervalestimation.py  intervalestimationtest.py  learningFileGenerator.py  make_readable.py  pstat.py  stats.py
brain/src/behavior/: .gitignore
brain/src/behavior/approachtable/: approachtable_1.py
brain/src/behavior/dummy/: dummy_1.py
brain/src/behavior/examplespeech/: JSGFParser.py  examplespeech_0.py
brain/src/behavior/gotomovebase/: gotomovebase_1.py
brain/src/behavior/gotowrapper/: gotowrapper_1.py
brain/src/behavior/imageprocess/: imageprocess_0.py
brain/src/behavior/labnavigation/: labnavigation_1.py
brain/src/body/: alice.py  arduino.py  bodycontroller.py  bodycontrollertest.py  fake_nao.py  fake_pioneer.py  fakenaotest.py  motion.py  movebase.py  nao.py  pioneer.py  pioneerTwist.py  pioneer_connector.py
brain/src/communicator/: communicator.py  test_communicator.py  tester.py  videomanager.py
brain/src/config/: behaviors_config  config_3doors_nav  config_approachtable_test  config_dummy  config_example_speech  config_lab_nav  config_lab_nav2  config_lab_nav3  config_main  config_navigation  config_process_image  config_recognition  config_speech  config_testb  mem_config
brain/src/navigation/: navigationcontroller.py
brain/src/speech/: SpeechRos.py  play_mp3.py  speech_to_memory.py  speechcontroller.py  speechcontrollertest.py  testcontroller.py
brain/src/util/: JSGFParser.py  annotationtools.py  averageimages.py  binarysocket.py  cacla.py  check_detections.py  config.py  deadlock.py  doorchecker.py  find_xtion.py  imgsource.py  interval.py  iomanager.py  iopoll.py  kinect_depth.py  kinectmemwriter.py  kinectvideo.py  loggingextra.py  mail.py  marytts.py  naovideo.py  nn_ensemble.py  nullhandler.py  object_detection.py  odometry_utils.py  openni_kinectvideo.py  pointcloud_utils.py  predator_socket.py  receivesocket.py  recognition_report.py  report.py  rosgesture.py  rosimage.py  rostime.py  scale.py  sendsocket.py  speed_angle.py  takeimages.py  takesnapshotskeyboard.py  testsocket.py  (+5 more)
brain/src/vision/: HumanDetector.py  README  abstractvisionmodule.py  blobdetector.py  blobdetector_new.py  classmaker.py  eigenfaces.py  example.py  facedetect.py  facerecognizer.py  facetrainer.py  haarface.py  haarface_rotate.py  objectdetector_avm.py  observer.py  obstacledetector.py  predatorsegment2.py  remote.py  remote_RL.py  remote_TextCommand.py  smokedetect.py  snapshotsaver.py  surfdetect.py  tablemodule.py
brain/src/visioncontroller/: communicator_connector.py  communicator_connector_test.py  visioncontroller.py  visioncontroller_test.py  visionmodule_connection_handler.py  visionmodule_listener.py  visionmodule_listener_handler_test.py
brain/src/visualisation/: avoidancevisualizer.py
ros/Ckpt/: output_labels.txt
ros/catkin_ws/src/object2d_modeler/: CMakeLists.txt  package.xml  package.xml.save
ros/catkin_ws/src/object2d_modeler/launch/: objects_kinect2.launch  objects_xtion.launch
ros/catkin_ws/src/object2d_modeler/src/: main.cc
ros/ckpt/: output_labels.txt
ros/maps/: 3_doors_room.yaml  map_of_bigroom.yaml  mylabmap.yaml
(+263 files in other folders)
